<?xml version="1.0"?>
<package>
  <name>std_msgs_stamped</name>
  <version>1.0.0</version>

  <description>Stamped versions of std_msgs messages.</description>
  <maintainer email="SoulGateW@gmail.com">AstreinW</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
